--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 GOOGLE_PLACES_API_KEY=
-GOOGLE_PLACES_LOCATION=49.2606,-123.2460
-GOOGLE_PLACES_RADIUS=500
-GOOGLE_PLACES_TYPE=cafe
+GOOGLE_PLACES_LOCATION=
+GOOGLE_PLACES_RADIUS=
+GOOGLE_PLACES_TYPE=
